--- a/account/templates/account/settings.html
+++ b/account/templates/account/settings.html
@@ -39,7 +39,7 @@
 
                 <div class="form-group">
                     <label for="id_email">Email</label>
-                    <input type="email" class="form-control" name="email" value="{{user.email}}" maxlength="30" id="id_email">
+                    <input type="email" class="form-control disabled" name="email" value="{{user.email}}" maxlength="30" id="id_email">
                 </div>
 
                 <div class="form-group">
