--- a/tema/templates/tema/predmet.html
+++ b/tema/templates/tema/predmet.html
@@ -135,7 +135,7 @@
 											</div>
 
 											<!-- Popis svih trenutnih tema -->
-                                            {% for tema in sve_teme %}
+                                            {% for tema in items %}
                                             <div class="dropdown_item">
                                                 <div class="dropdown_item_title">
                                                     <a href="/objava/studij={{studij_id}}/semestar={{semestar_num}}/kolegij={{kolegij_id}}/tema={{tema.tema_id}}"><span>{{tema.tema_ime}}</span></a>
@@ -146,32 +146,9 @@
                                             {% endfor %}
 										</div>
 									</div>
+									{% include "paginacija.html" %}
 								</div>
 
-								<!-- Reviews -->
-								<div class="tab_panel tab_panel_3">
-									<div class="tab_panel_title">Course Review</div>
-
-									<!-- Rating -->
-									<div class="review_rating_container">
-										<div class="review_rating">
-											<div class="review_rating_num">4.5</div>
-											<div class="review_rating_stars">
-												<div class="rating_r rating_r_4"><i></i><i></i><i></i><i></i><i></i></div>
-											</div>
-											<div class="review_rating_text">(28 Ratings)</div>
-										</div>
-										<div class="review_rating_bars">
-											<ul>
-												<li><span>5 Star</span><div class="review_rating_bar"><div style="width:90%;"></div></div></li>
-												<li><span>4 Star</span><div class="review_rating_bar"><div style="width:75%;"></div></div></li>
-												<li><span>3 Star</span><div class="review_rating_bar"><div style="width:32%;"></div></div></li>
-												<li><span>2 Star</span><div class="review_rating_bar"><div style="width:10%;"></div></div></li>
-												<li><span>1 Star</span><div class="review_rating_bar"><div style="width:3%;"></div></div></li>
-											</ul>
-										</div>
-									</div>
-								</div>
 							</div>
 						</div>
 					</div>
