--- a/account/templates/account/mypage.html
+++ b/account/templates/account/mypage.html
@@ -14,14 +14,24 @@
 <link rel="stylesheet" type="text/css" href="{% static 'plugins/OwlCarousel2-2.2.1/animate.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'styles/main_styles.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'styles/responsive.css' %}">
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" type="text/css" href="{% static 'styles/style_login.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'styles/bootstrap4/bootstrap.min.css' %}">
+<link href="{% static 'plugins/font-awesome-4.7.0/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
+<link href="{% static 'plugins/colorbox/colorbox.css' %}" rel="stylesheet" type="text/css">
+<link rel="stylesheet" type="text/css" href="{% static 'plugins/OwlCarousel2-2.2.1/owl.carousel.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'plugins/OwlCarousel2-2.2.1/owl.theme.default.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'plugins/OwlCarousel2-2.2.1/animate.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'styles/course.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'styles/course_responsive.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'styles/bootstrap4/bootstrap.min.css' %}">
+
 </head>
 <body>
 
 <div class="super_container">
-
-
 	<header class="header">
-
 		<div class="header_container">
 			<div class="container">
 				<div class="row">
@@ -52,6 +62,9 @@
 										</div>
       								</li>
 								</ul>
+                                <div class="hamburger menu_mm">
+									<i class="fa fa-bars menu_mm" aria-hidden="true"></i>
+								</div>
 							</nav>
 						</div>
 					</div>
@@ -60,15 +73,78 @@
 		</div>
 	</header>
 
+
+	<div class="menu d-flex flex-column align-items-end justify-content-start text-right menu_mm trans_400">
+		<div class="menu_close_container"><div class="menu_close"><div></div><div></div></div></div>
+		<!--<div class="search">-->
+			<!--<form action="#" class="header_search_form menu_mm">-->
+				<!--<input type="search" class="search_input menu_mm" placeholder="Search" required="required">-->
+				<!--<button class="header_search_button d-flex flex-column align-items-center justify-content-center menu_mm">-->
+					<!--<i class="fa fa-search menu_mm" aria-hidden="true"></i>-->
+				<!--</button>-->
+			<!--</form>-->
+		<!--</div>-->
+		<nav class="menu_nav">
+			<ul class="menu_mm">
+				<li class="menu_mm"><a href="{% url 'homepage' %}">Početna</a></li>
+                <li class="menu_mm"><a href="{% url 'studij:homepage'%}">Arhiva kolegija</a></li>
+                <li class="menu_mm"><a href="{% url 'account:mypage' %}">Moj profil</a></li>
+				<li class="menu_mm"><a href="{% url 'account:settings'%}">Postavke</a></li>
+				<li class="menu_mm"><a href="{% url 'account:logout' %}">Odjavi se</a></li>
+
+			</ul>
+		</nav>
+	</div>
+
     {% block content %}
-    <br><br><br><br><br><br><br><br>
-    <div>
-        <img src="{{ user.student.profile_image.url }}" width="240">
-        <h2>Moji kolegiji:</h2>
-        {% for kolegij in svi_moji_kolegiji %}
-             <a href="/studij/studijski_programi/studij={{kolegij.studij_id_id}}/semestar={{kolegij.semestar}}/kolegij={{kolegij.kolegij_id}}">{{kolegij.kolegij_ime}}</a><br><br>
-		{% endfor %}
-    </div>
+    <div class="course">
+		<div class="container">
+			<div class="row">
+
+				<!-- Course -->
+				<div class="col-lg-8">
+					<div class="course_container" id="container-1">
+						<!-- Course Tabs -->
+						<br><br>
+						<div class="course_title">Pregled E-kolegija</div>
+						<div class="course_tabs_container">
+							<div class="tabs d-flex flex-row align-items-center justify-content-start">
+								<div class="tab" id="fragment-2">Moji kolegiji</div>
+							</div>
+
+
+							<div class="tab_panels">
+								<!-- Materijali -->
+								<div class="tab_panel active">
+									<div class="tab_panel_content">
+										<div class="tab_panel_title"></div>
+											<!-- Popis svih omiljenih kolegija -->
+											{% for kolegij in svi_moji_kolegiji %}
+                                            <div class="dropdown_item">
+                                                <div class="dropdown_item_title">
+                                                    <a href="/studij/studijski_programi/studij={{kolegij.studij_id_id}}/semestar={{kolegij.semestar}}/kolegij={{kolegij.kolegij_id}}"><span>{{kolegij.kolegij_ime}}</span></a>
+                                                <div class="dropdown_item_text">
+                                                    <p>Tu može ići posljedna objava ili tako nešto</p>
+                                                </div>
+                                            </div>
+                                            {% endfor %}
+										</div>
+									</div>
+									{% include "paginacija.html" %}
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-4">
+					<div class="sidebar">
+						lalalala
+					</div>
+				</div>
+
+			</div>
+		</div>
+	</div>
     {% endblock %}
 
 <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
