--- a/templates/index.html
+++ b/templates/index.html
@@ -80,14 +80,49 @@
       								</li>
 									{% endif %}
 								</ul>
+								<div class="hamburger menu_mm">
+									<i class="fa fa-bars menu_mm" aria-hidden="true"></i>
+								</div>
 							</nav>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
+
 	</header>
-    {% block content %}
+
+	<div class="menu d-flex flex-column align-items-end justify-content-start text-right menu_mm trans_400">
+		<div class="menu_close_container"><div class="menu_close"><div></div><div></div></div></div>
+		<!--<div class="search">-->
+			<!--<form action="#" class="header_search_form menu_mm">-->
+				<!--<input type="search" class="search_input menu_mm" placeholder="Search" required="required">-->
+				<!--<button class="header_search_button d-flex flex-column align-items-center justify-content-center menu_mm">-->
+					<!--<i class="fa fa-search menu_mm" aria-hidden="true"></i>-->
+				<!--</button>-->
+			<!--</form>-->
+		<!--</div>-->
+		<nav class="menu_nav">
+			<ul class="menu_mm">
+				<li class="menu_mm"><a href="{% url 'tko_smo:homepage'%}">Tko smo?</a></li>
+				<li class="menu_mm"><a href="{% url 'za_brucose:homepage'%}">Za brucose</a></li>
+				<li class="menu_mm"><a href="{% url 'kontakt:kontakt'%}">Kontakt</a></li>
+				<li class="menu_mm"><a href="{% url 'donacije:donacije'%}">Doniraj</a></li>
+				{% if not user.is_authenticated %}
+					<li class="menu_mm"><a href="{% url 'account:signup'%}">Registriraj se</a></li>
+					<li class="menu_mm"><a href="{% url 'account:login' %}">Prijavi se</a></li>
+				{% else %}
+					<li class="menu_mm"><a href="{% url 'account:mypage' %}">Moj profil</a></li>
+					<li class="menu_mm"><a href="{% url 'account:settings'%}">Postavke</a></li>
+					<li class="menu_mm"><a href="{% url 'account:logout' %}">Odjavi se</a></li>
+
+				{% endif %}
+			</ul>
+		</nav>
+	</div>
+
+
+	{% block content %}
 	<!-- Home -->
 
 	<div class="home">
@@ -228,7 +263,6 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 		</div>
 	</footer>
 </div>
-{% endblock content %}
 <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
 <script src="{% static 'styles/bootstrap4/popper.js' %}"></script>
 <script src="{% static 'styles/bootstrap4/bootstrap.min.js' %}"></script>
@@ -237,10 +271,19 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 <script src="{% static 'plugins/scrollmagic/ScrollMagic.min.js' %}"></script>
 <script src="{% static 'plugins/greensock/animation.gsap.min.js' %}"></script>
 <script src="{% static 'plugins/greensock/ScrollToPlugin.min.js' %}"></script>
+<script src="{% static 'plugins/easing/easing.js' %}"></script>
+<script src="{% static 'plugins/parallax-js-master/parallax.min.js' %}"></script>
+
+<script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
+<script src="{% static 'styles/bootstrap4/popper.js' %}"></script>
+<script src="{% static 'styles/bootstrap4/bootstrap.min.js' %}"></script>
 <script src="{% static 'plugins/OwlCarousel2-2.2.1/owl.carousel.js' %}"></script>
 <script src="{% static 'plugins/easing/easing.js' %}"></script>
 <script src="{% static 'plugins/parallax-js-master/parallax.min.js' %}"></script>
-<script src="{% static 'js/custom.js' %}"></script>
+<script src="{% static 'plugins/colorbox/jquery.colorbox-min.js' %}"></script>
+<script src="{% static 'js/course.js' %}"></script>
+<script src="{% static 'js/our_custom.js' %}"></script>
+{% endblock content %}
 
 </body>
 </html>
