--- a/account/templates/account/signup.html
+++ b/account/templates/account/signup.html
@@ -5,6 +5,10 @@
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 <br><br><br><br>
 
 <div class="container login-container">
@@ -43,7 +47,30 @@
                 </div>
 
                 <div class="form-group">
-                    <input type="checkbox" class="form-check-inline" required name="terms"> Prihvaćam <a href="pravila.html"><u>pravila korištenja</u></a>
+                    <input type="checkbox" class="form-check-inline" required name="terms"> Prihvaćam <a data-toggle="modal" href="#myModal"><u>pravila korištenja</u></a>
+                    <!-- The Modal -->
+                    <div class="modal" id="myModal">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                            <!-- Modal Header -->
+                                <div class="modal-header">
+                                    <h4 class="modal-title">Pravila korištenja</h4>
+                                    <button type="button" class="close" data-dismiss="modal" >&times;</button>
+                                </div>
+
+                                <!-- Modal body -->
+                                <div class="modal-body">
+                                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce porttitor maximus tellus, in dictum mauris laoreet ut. Suspendisse pellentesque interdum nisl, id dictum nulla tempus a. Curabitur aliquam mollis mi vel sodales. Pellentesque sed elit mattis, malesuada lectus nec, accumsan tellus. Nullam posuere varius nisl nec bibendum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce posuere, dui eget euismod molestie, nibh sem tristique diam, eget laoreet elit tellus nec felis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+                                </div>
+
+                                <!-- Modal footer -->
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-info" data-dismiss="modal" style="background-color: blue">Zatvori</button>
+                                </div>
+
+                            </div>
+                        </div>
+                      </div>
                 </div>
 
                 <div class="form-group">
