--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -13,13 +13,6 @@
             <h3>Prijavi se</h3>
             <form action="{% url 'account:login' %}" method="post">
                 {% csrf_token %}
-                    <p>hej</p>
-                    {% for message in messages %}
-                        <p>hej</p>
-                        <p> {{message}}</p>
-
-                    {% endfor %}
-
                 <div class="form-group">
                  <input type="text" class="form-control" name="username" id="id_username" placeholder="Korisničko ime">
                 </div>
@@ -31,6 +24,12 @@
                 {% if request.GET.next %}
                     <input type="hidden" name="next" value="{{ request.GET.next }}">
                 {% endif %}
+
+                {% for message in messages %}
+                     {% csrf_token %}
+                    <p>{{message}}</p>
+                    <br>
+                {% endfor %}
 
                 <div class="form-group">
                     <input type="submit" class="btnSubmit" value="Prijava" />
