--- a/account/templates/account/mypage.html
+++ b/account/templates/account/mypage.html
@@ -110,13 +110,24 @@
 							<!-- Course Info Item -->
 							<div class="course_info_item">
 								<div class="course_info_title">Tvoj rating:</div>
-								<div class="rating_r rating_r_4"><i></i><i></i><i></i><i></i><i></i></div>
+								{% if user.student.stars == 1 %}
+									<div class="rating_r rating_r_1"><i></i><i></i><i></i><i></i><i></i></div>
+								{% elif user.student.stars == 2 %}
+									<div class="rating_r rating_r_2"><i></i><i></i><i></i><i></i><i></i></div>
+								{% elif user.student.stars == 3 %}
+									<div class="rating_r rating_r_3"><i></i><i></i><i></i><i></i><i></i></div>
+								{% elif user.student.stars == 4 %}
+									<div class="rating_r rating_r_4"><i></i><i></i><i></i><i></i><i></i></div>
+
+								{% else %}
+									<div class="rating_r rating_r_5"><i></i><i></i><i></i><i></i><i></i></div>
+								{% endif %}
 							</div>
 
 							<!-- Course Info Item -->
 							<div class="course_info_item">
 								<div class="course_info_title">Broj objava:</div>
-								<div class="course_info_text"><a href="#">12</a></div>
+								<div class="course_info_text"><a href="#">10</a></div>
 							</div>
 
 						</div>
