--- a/account/templates/account/signup.html
+++ b/account/templates/account/signup.html
@@ -9,13 +9,23 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
+{% if successful_submit %}
+    <script type="text/javascript">
+        $(document).ready(function(){
+            $("#exampleModal").modal('show');
+        });
+    </script>
+{% endif %}
+
+
 <br><br><br><br>
 
 <div class="container login-container">
     <div class="row">
         <div class="col-md-6 login-form-1">
             <h3>Registriraj se</h3>
-            <form method="post">
+            <form method="post" id="RegForm">
                 {% csrf_token %}
                 <div class="form-group">
                     <input type="text" class="form-control" name="username" id="id_username" maxlength="150" placeholder="Korisničko ime">
@@ -74,13 +84,36 @@
                 </div>
 
                 <div class="form-group">
-                    <input type="submit" class="btnSubmit" value="Registriraj me" />
+                    <input type="submit" class="btnSubmit" data-target="#exampleModal" data-toggle="modal" value="Registriraj me" />
+
+                    <div class="modal" id="exampleModal">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                            <!-- Modal Header -->
+                                <div class="modal-header">
+                                    <h4 class="modal-title">Pravila korištenja</h4>
+                                    <button type="button" class="close" data-dismiss="modal" >&times;</button>
+                                </div>
+
+                                <!-- Modal body -->
+                                <div class="modal-body">
+                                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce porttitor maximus tellus, in dictum mauris laoreet ut. Suspendisse pellentesque interdum nisl, id dictum nulla tempus a. Curabitur aliquam mollis mi vel sodales. Pellentesque sed elit mattis, malesuada lectus nec, accumsan tellus. Nullam posuere varius nisl nec bibendum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce posuere, dui eget euismod molestie, nibh sem tristique diam, eget laoreet elit tellus nec felis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+                                </div>
+
+                                <!-- Modal footer -->
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-info" data-dismiss="modal" style="background-color: blue">Zatvori</button>
+                                </div>
+
+                            </div>
+                        </div>
+                      </div>
+
                 </div>
 
                 <div class="form-group">
                     <a href="{% url 'account:login' %}" class="ForgetPwd">Imaš već račun? Prijavi se!</a>
                 </div>
-
             </form>
         </div>
     </div>
