--- a/tema/templates/tema/predmet.html
+++ b/tema/templates/tema/predmet.html
@@ -138,7 +138,7 @@
                                             {% for tema in items %}
                                             <div class="dropdown_item">
                                                 <div class="dropdown_item_title">
-                                                    <a href="/objava/studij={{studij_id}}/semestar={{semestar_num}}/kolegij={{kolegij_id}}/tema={{tema.tema_id}}"><span>{{tema.tema_ime}}</span></a>
+                                                    <a href="/objava/studij={{studij_id}}/smjer={{smjer_id}}/semestar={{semestar_num}}/kolegij={{kolegij_id}}/tema={{tema.tema_id}}"><span>{{tema.tema_ime}}</span></a>
                                                 <div class="dropdown_item_text">
                                                     <p>Lorem Ipsn gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auci elit consequat ipsutis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus.</p>
                                                 </div>
