--- a/account/templates/account/signup.html
+++ b/account/templates/account/signup.html
@@ -29,31 +29,37 @@
                 {% csrf_token %}
                 <div class="form-group">
                     <input type="text" class="form-control" name="username" id="id_username" maxlength="150" placeholder="Korisničko ime">
+                    <p>{{form.errors.username}}</p>
                 </div>
 
                 <div class="form-group">
                     <input type="email" class="form-control" name="email" maxlength="150" id="id_email" placeholder="@riteh mail">
+                    <p>{{form.errors.email}}</p>
                 </div>
 
                 <div class="form-group">
                     <input type="text" class="form-control" name="ime" maxlength="30" id="id_ime" placeholder="Ime">
+                    <p>{{form.errors.ime}}</p>
                 </div>
 
                 <div class="form-group">
                     <input type="text" class="form-control" name="prezime" maxlength="30" id="id_prezime" placeholder="Prezime">
+                    <p>{{form.errors.prezime}}</p>
                 </div>
 
                 <div class="form-group">
                     <input type="password" class="form-control" name="password1"  id="id_password1" placeholder="Lozinka">
+                    <p>{{form.errors.password1}}</p>
                 </div>
 
                 <div class="form-group">
                     <input type="password" class="form-control" name="password2"  id="id_password2" placeholder="Ponovi lozinku">
+                    <p>{{form.errors.password2}}</p>
                 </div>
 
 
                 <div class="form-group">
-                    {{student_form.studij_id}}
+                    {{student_form.studij}}
                 </div>
 
                 <div class="form-group">
@@ -84,31 +90,7 @@
                 </div>
 
                 <div class="form-group">
-                    <input type="submit" class="btnSubmit" data-target="#exampleModal" data-toggle="modal" value="Registriraj me" />
-
-                    <div class="modal" id="exampleModal">
-                        <div class="modal-dialog">
-                            <div class="modal-content">
-                            <!-- Modal Header -->
-                                <div class="modal-header">
-                                    <h4 class="modal-title">Pravila korištenja</h4>
-                                    <button type="button" class="close" data-dismiss="modal" >&times;</button>
-                                </div>
-
-                                <!-- Modal body -->
-                                <div class="modal-body">
-                                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce porttitor maximus tellus, in dictum mauris laoreet ut. Suspendisse pellentesque interdum nisl, id dictum nulla tempus a. Curabitur aliquam mollis mi vel sodales. Pellentesque sed elit mattis, malesuada lectus nec, accumsan tellus. Nullam posuere varius nisl nec bibendum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce posuere, dui eget euismod molestie, nibh sem tristique diam, eget laoreet elit tellus nec felis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
-                                </div>
-
-                                <!-- Modal footer -->
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-info" data-dismiss="modal" style="background-color: blue">Zatvori</button>
-                                </div>
-
-                            </div>
-                        </div>
-                      </div>
-
+                    <input type="submit" class="btnSubmit" value="Registriraj me" />
                 </div>
 
                 <div class="form-group">
