--- a/templates/index.html
+++ b/templates/index.html
@@ -3,17 +3,7 @@
 <html lang="en">
 <head>
 <title>Jež</title>
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="description" content="Unicat project">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="{% static 'styles/bootstrap4/bootstrap.min.css' %}">
-<link href="{% static 'plugins/font-awesome-4.7.0/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
-<link rel="stylesheet" type="text/css" href="{% static 'plugins/OwlCarousel2-2.2.1/owl.carousel.css' %}">
-<link rel="stylesheet" type="text/css" href="{% static 'plugins/OwlCarousel2-2.2.1/owl.theme.default.css' %}">
-<link rel="stylesheet" type="text/css" href="{% static 'plugins/OwlCarousel2-2.2.1/animate.css' %}">
-<link rel="stylesheet" type="text/css" href="{% static 'styles/main_styles.css' %}">
-<link rel="stylesheet" type="text/css" href="{% static 'styles/responsive.css' %}">
+{% include "links.html" %}
 </head>
 <body>
 
@@ -56,6 +46,7 @@
 						<div class="header_content d-flex flex-row align-items-center justify-content-start">
 							<div class="logo_container">
 								<a href="#">
+									<img src="{% static 'images/jez.png' %}" class="rounded-circle img-fluid img-thumbnail" style="height:80px;" alt="JezLogo">
 									<div class="logo_text">Jež</div>
 								</a>
 							</div>
@@ -127,7 +118,7 @@
 
 	<div class="home">
 		<div class="home_slider_container">
-			
+			<br><br><br><br>
 			<!-- Home Slider, maknuti strelice -->
 			<div class="owl-carousel owl-theme home_slider">
 				<!-- Home Slider Item -->
@@ -149,12 +140,12 @@
 
 		<!-- Home Slider Nav -->
 
-		<div class="home_slider_nav home_slider_prev"><i class="fa fa-angle-left" aria-hidden="true"></i></div>
-		<div class="home_slider_nav home_slider_next"><i class="fa fa-angle-right" aria-hidden="true"></i></div>
+		<!--<div class="home_slider_nav home_slider_prev"><i class="fa fa-angle-left" aria-hidden="true"></i></div>-->
+		<!--<div class="home_slider_nav home_slider_next"><i class="fa fa-angle-right" aria-hidden="true"></i></div>-->
 	</div>
 
 	<!-- Features -->
-
+	<br><br><br><br><br>
 	<div class="features">
 		<div class="container">
 			<div class="row">
@@ -223,8 +214,9 @@
 								<!-- Footer About -->
 								<div class="footer_section footer_about">
 									<div class="footer_logo_container">
-										<a href="#">
-											<div class="footer_logo_text">Jež</div>
+
+										<a href="{% url 'homepage' %}">
+											<div class="logo_text">Jež</div>
 										</a>
 									</div>
 									<div class="footer_about_text">
