--- a/objava/templates/objava/post.html
+++ b/objava/templates/objava/post.html
@@ -90,6 +90,7 @@
                                                                  <input type="hidden" value="{{ kolegij_id }}" name="get_kolegij_id">
                                                                  <input type="hidden" value="{{ semestar_num }}" name="get_semestar_num">
                                                                  <input type="hidden" value="{{ tema_id }}" name="get_tema_id">
+                                                                 <input type="hidden" value="{{ smjer_id }}" name="get_smjer_id">
                                                             </div>
                                                         </div>
                                                     </form>
