Forgot my password - need to change form for submiting new password, else is working

--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -36,7 +36,7 @@
                 </div>
 
                 <div class="form-group">
-                    <a href="#" class="ForgetPwd">Zaboravljena lozinka?</a>
+                    <a href="{% url 'account:forgotpass' %}" class="ForgetPwd">Zaboravljena lozinka?</a>
                 </div>
 
                 <div class="form-group">
