--- a/objava/templates/objava/post.html
+++ b/objava/templates/objava/post.html
@@ -73,6 +73,7 @@
                                                          <input type="hidden" value="{{ kolegij_id }}" name="get_kolegij_id">
                                                          <input type="hidden" value="{{ semestar_num }}" name="get_semestar_num">
                                                          <input type="hidden" value="{{ tema_id }}" name="get_tema_id">
+                                                          <input type="hidden" value="{{ smjer_id }}" name="get_smjer_id">
                                                      </form>
                                                     <div class="comment_extra comment_likes"><a href="#id_tekst" onclick="copyText('{{user.username}}', '{{obj.tekst}}', '{{obj.date}}')"><i class="fa fa-reply" style="font-size:22px;color:#e60e08" aria-hidden="true"></i>&nbsp;Odgovori</a></div>
                                                      {% if student.stars > 2 %}
