--- a/templates/index.html
+++ b/templates/index.html
@@ -3,16 +3,26 @@
 <html lang="en">
 <head>
 <title>Jež</title>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="description" content="Jež project">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 {% include "links.html" %}
+<link rel="stylesheet" type="text/css" href="{% static 'styles/bootstrap4/bootstrap.min.css' %}">
+<link href="{% static 'plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'plugins/OwlCarousel2-2.2.1/owl.carousel.css">
+<link rel="stylesheet" type="text/css" href="{% static 'plugins/OwlCarousel2-2.2.1/owl.theme.default.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'plugins/OwlCarousel2-2.2.1/animate.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'styles/main_styles.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'styles/responsive.css' %}">
 </head>
 <body>
 
 <div class="super_container">
 
 	<!-- Header -->
-
 	<header class="header">
-			
+
 		{% if not user.is_authenticated %}
 		<div class="top_bar">
 			<div class="top_bar_container">
@@ -24,7 +34,7 @@
 									<li><div class="question">Imaš pitanje?</div></li>
 									<li>
 										<i class="fa fa-envelope-o" aria-hidden="true"></i>
-										<div>info.jez@gmail.com</div>
+										<div>jezweb2019@gmail.com</div>
 									</li>
 								</ul>
 								<div class="top_bar_login ml-auto">
@@ -34,7 +44,7 @@
 						</div>
 					</div>
 				</div>
-			</div>				
+			</div>
 		</div>
 		{% endif %}
 		<!-- Header Content -->
@@ -50,16 +60,16 @@
 									<div class="logo_text">Jež</div>
 								</a>
 							</div>
+
 							<nav class="main_nav_contaner ml-auto">
 								<ul class="main_nav">
-									<li class="active"><a href="{% url 'homepage' %}">Početna</a></li>
-									<li> <a href="{% url 'tko_smo:homepage'%}">Tko smo?</a></li>
-									<li><a href="{% url 'za_brucose:homepage'%}">Za brucose</a></li>
-									<li><a href="{% url 'kontakt:kontakt'%}">Kontakt</a></li>
-									<li><a href="{% url 'donacije:donacije'%}">Doniraj</a></li>
+									<li id="headerLink" onclick="changeclass(this);" class=""><a href="{% url 'homepage' %}">Početna</a></li>
+									<li id="headerLink" onclick="changeclass(this);"  class=""><a href="{% url 'za_brucose:homepage'%}">Za brucoše</a></li>
+									<li id="headerLink" onclick="changeclass(this);"  class=""><a href="{% url 'donacije:donacije'%}">Doniraj</a></li>
 									{% if not user.is_authenticated %}
 									<li><a href="{% url 'account:signup'%}">Registriraj se</a></li>
 									{% else %}
+									<li><a href="{% url 'studij:homepage'%}">Arhiva kolegija</a></li>
 									<li class="dropdown">
 										<a class="dropdown-toggle" data-toggle="dropdown" href="#">{{user.get_username }}
 										<span class="caret"></span></a>
@@ -83,7 +93,10 @@
 
 	</header>
 
-	<div class="menu d-flex flex-column align-items-end justify-content-start text-right menu_mm trans_400">
+
+	<!-- Menu -->
+
+	<div class="menu d-flex flex-column align-items-end justify-content-start text-right menu_mm trans_400" style="width: 200px">
 		<div class="menu_close_container"><div class="menu_close"><div></div><div></div></div></div>
 		<!--<div class="search">-->
 			<!--<form action="#" class="header_search_form menu_mm">-->
@@ -95,14 +108,14 @@
 		<!--</div>-->
 		<nav class="menu_nav">
 			<ul class="menu_mm">
-				<li class="menu_mm"><a href="{% url 'tko_smo:homepage'%}">Tko smo?</a></li>
-				<li class="menu_mm"><a href="{% url 'za_brucose:homepage'%}">Za brucose</a></li>
-				<li class="menu_mm"><a href="{% url 'kontakt:kontakt'%}">Kontakt</a></li>
+				<li class="menu_mm"><a href="{% url 'homepage' %}">Jež</a></li>
+				<li class="menu_mm"><a href="{% url 'za_brucose:homepage'%}">Za brucoše</a></li>
 				<li class="menu_mm"><a href="{% url 'donacije:donacije'%}">Doniraj</a></li>
 				{% if not user.is_authenticated %}
 					<li class="menu_mm"><a href="{% url 'account:signup'%}">Registriraj se</a></li>
 					<li class="menu_mm"><a href="{% url 'account:login' %}">Prijavi se</a></li>
 				{% else %}
+					<li class="menu_mm"><a href="{% url 'studij:homepage'%}">Arhiva kolegija</a></li>
 					<li class="menu_mm"><a href="{% url 'account:mypage' %}">Moj profil</a></li>
 					<li class="menu_mm"><a href="{% url 'account:settings'%}">Postavke</a></li>
 					<li class="menu_mm"><a href="{% url 'account:logout' %}">Odjavi se</a></li>
@@ -112,24 +125,23 @@
 		</nav>
 	</div>
 
-
 	{% block content %}
 	<!-- Home -->
 
-	<div class="home">
-		<div class="home_slider_container">
+	<div class="home" style="height: 550px">
+		<div class="home_slider_container" style="height: 550px">
 			<br><br><br><br>
 			<!-- Home Slider, maknuti strelice -->
 			<div class="owl-carousel owl-theme home_slider">
 				<!-- Home Slider Item -->
 				<div class="owl-item">
-					<div class="home_slider_background" style="background-image:url({% static 'images/home_slider_1.jpg' %})"></div>
+					<div class="home_slider_background" style="background-image:url({% static 'images/learning.jpg' %})"></div>
 					<div class="home_slider_content">
 						<div class="container">
 							<div class="row">
-								<div class="col text-center">
+								<div class="col justify-content-sm-start">
 									<div class="home_slider_title">Lorem ipsum dolor sit</div>
-									<div class="home_slider_subtitle">Neki tekst</div>
+									<div class="home_slider_subtitle">Lorem ipsum dolor sit</div>
 								</div>
 							</div>
 						</div>
@@ -138,31 +150,27 @@
 			</div>
 		</div>
 
-		<!-- Home Slider Nav -->
-
-		<!--<div class="home_slider_nav home_slider_prev"><i class="fa fa-angle-left" aria-hidden="true"></i></div>-->
-		<!--<div class="home_slider_nav home_slider_next"><i class="fa fa-angle-right" aria-hidden="true"></i></div>-->
 	</div>
 
 	<!-- Features -->
-	<br><br><br><br><br>
+
 	<div class="features">
 		<div class="container">
 			<div class="row">
 				<div class="col">
 					<div class="section_title_container text-center">
-						<h2 class="section_title">Welcome To Jež E-Learning</h2>
+						<h2 class="section_title">Welcome To Jež</h2>
 						<div class="section_subtitle"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel gravida arcu. Vestibulum feugiat, sapien ultrices fermentum congue, quam velit venenatis sem</p></div>
 					</div>
 				</div>
 			</div>
 			<div class="row features_row">
-				
+
 				<!-- Features Item -->
 				<div class="col-lg-3 feature_col">
 					<div class="feature text-center trans_400">
-						<div class="feature_icon"><img src="images/icon_1.png" alt=""></div>
-						<h3 class="feature_title">The Experts</h3>
+						<div class="feature_icon"><img src="{% static 'images/icon_1.png' %}" alt=""></div>
+						<h3 class="feature_title">Strojarstvo</h3>
 						<div class="feature_text"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p></div>
 					</div>
 				</div>
@@ -170,8 +178,8 @@
 				<!-- Features Item -->
 				<div class="col-lg-3 feature_col">
 					<div class="feature text-center trans_400">
-						<div class="feature_icon"><img src="images/icon_2.png" alt=""></div>
-						<h3 class="feature_title">Book & Library</h3>
+						<div class="feature_icon"><img src="{% static 'images/icon_2.png' %}" alt="" style="height: 65px"></div>
+						<h3 class="feature_title">Elektrotehnika</h3>
 						<div class="feature_text"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p></div>
 					</div>
 				</div>
@@ -179,8 +187,8 @@
 				<!-- Features Item -->
 				<div class="col-lg-3 feature_col">
 					<div class="feature text-center trans_400">
-						<div class="feature_icon"><img src="images/icon_3.png" alt=""></div>
-						<h3 class="feature_title">Best Courses</h3>
+						<div class="feature_icon"><img src="{% static 'images/icon_3.png' %}" alt=""></div>
+						<h3 class="feature_title">Računarstvo</h3>
 						<div class="feature_text"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p></div>
 					</div>
 				</div>
@@ -188,8 +196,8 @@
 				<!-- Features Item -->
 				<div class="col-lg-3 feature_col">
 					<div class="feature text-center trans_400">
-						<div class="feature_icon"><img src="images/icon_4.png" alt=""></div>
-						<h3 class="feature_title">Award & Reward</h3>
+						<div class="feature_icon"><img src="{% static 'images/icon_4.png' %}" alt="" style="height: 65px"></div>
+						<h3 class="feature_title">Brodogradnja</h3>
 						<div class="feature_text"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p></div>
 					</div>
 				</div>
@@ -198,11 +206,140 @@
 		</div>
 	</div>
 
+	<!-- Latest News -->
+
+	<div class="news">
+		<div class="container">
+			<div class="row">
+				<div class="col">
+					<div class="section_title_container text-center">
+						<h2 class="section_title">Latest News</h2>
+						<div class="section_subtitle"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel gravida arcu. Vestibulum feugiat, sapien ultrices fermentum congue, quam velit venenatis sem</p></div>
+					</div>
+				</div>
+			</div>
+			<div class="row news_row">
+				<div class="news_col float-sm-left">
+
+					<!-- News Post Large -->
+					<div class="news_post_large_container">
+						<div class="news_post_large">
+							<!--<div class="news_post_image"><img src="{% static 'images/news_1.jpg' %}" alt=""></div>-->
+							<div class="news_post_large_title"><a href="#">Here’s What You Need to Know About Online Testing for the ACT and SAT</a> </div>
+							<div class="news_post_meta">
+								<ul>
+									<li><a href="#">admin</a></li>
+									<li><a href="#">november 11, 2017</a></li>
+								</ul>
+							</div>
+							<div class="news_post_text">
+								<p>Policy analysts generally agree on a need for reform, but not on which path policymakers should take. Can America learn anything from other nations...</p>
+							</div>
+							<div class="news_post_link"><a href="#">read more</a></div>
+						</div>
+					</div>
+				</div>
+				<div class="news_col float-sm-right">
+
+					<!-- News Post Large -->
+					<div class="news_post_large_container">
+						<div class="news_post_large">
+							<!--<div class="news_post_image"><img src="{% static 'images/news_1.jpg' %}" alt=""></div>-->
+							<div class="news_post_large_title"><a href="#">Here’s What You Need to Know About Online Testing for the ACT and SAT</a> </div>
+							<div class="news_post_meta">
+								<ul>
+									<li><a href="#">admin</a></li>
+									<li><a href="#">november 11, 2017</a></li>
+								</ul>
+							</div>
+							<div class="news_post_text">
+								<p>Policy analysts generally agree on a need for reform, but not on which path policymakers should take. Can America learn anything from other nations...</p>
+							</div>
+							<div class="news_post_link"><a href="#">read more</a></div>
+						</div>
+					</div>
+				</div>
+				<!--<div class="col-lg-5 news_col">-->
+					<!--<div class="news_posts_small">-->
+
+						<!--&lt;!&ndash; News Posts Small &ndash;&gt;-->
+						<!--<div class="news_post_small">-->
+							<!--<div class="news_post_small_title"><a href="blog_single.html">Home-based business insurance issue (Spring 2017 - 2018)</a></div>-->
+							<!--<div class="news_post_meta">-->
+								<!--<ul>-->
+									<!--<li><a href="#">admin</a></li>-->
+									<!--<li><a href="#">november 11, 2017</a></li>-->
+								<!--</ul>-->
+							<!--</div>-->
+						<!--</div>-->
+
+						<!--&lt;!&ndash; News Posts Small &ndash;&gt;-->
+						<!--<div class="news_post_small">-->
+							<!--<div class="news_post_small_title"><a href="blog_single.html">2018 Fall Issue: Credit Card Comparison Site Survey (Summer 2018)</a></div>-->
+							<!--<div class="news_post_meta">-->
+								<!--<ul>-->
+									<!--<li><a href="#">admin</a></li>-->
+									<!--<li><a href="#">november 11, 2017</a></li>-->
+								<!--</ul>-->
+							<!--</div>-->
+						<!--</div>-->
+
+						<!--&lt;!&ndash; News Posts Small &ndash;&gt;-->
+						<!--<div class="news_post_small">-->
+							<!--<div class="news_post_small_title"><a href="blog_single.html">Cuentas de cheques gratuitas una encuesta de Consumer Action</a></div>-->
+							<!--<div class="news_post_meta">-->
+								<!--<ul>-->
+									<!--<li><a href="#">admin</a></li>-->
+									<!--<li><a href="#">november 11, 2017</a></li>-->
+								<!--</ul>-->
+							<!--</div>-->
+						<!--</div>-->
+
+						<!--&lt;!&ndash; News Posts Small &ndash;&gt;-->
+						<!--<div class="news_post_small">-->
+							<!--<div class="news_post_small_title"><a href="blog_single.html">Troubled borrowers have fewer repayment or forgiveness options</a></div>-->
+							<!--<div class="news_post_meta">-->
+								<!--<ul>-->
+									<!--<li><a href="#">admin</a></li>-->
+									<!--<li><a href="#">november 11, 2017</a></li>-->
+								<!--</ul>-->
+							<!--</div>-->
+						<!--</div>-->
+
+					<!--</div>-->
+				<!--</div>-->
+			</div>
+		</div>
+	</div>
+
+	<!-- Newsletter -->
+
+	<div class="newsletter">
+		<div class="newsletter_background parallax-window" data-parallax="scroll" data-image-src="images/newsletter.jpg" data-speed="0.8"></div>
+		<div class="container">
+			<div class="row">
+				<div class="col">
+					<div class="newsletter_container d-flex flex-lg-row flex-column align-items-center justify-content-start">
+
+						<!-- Newsletter Content -->
+						<div class="newsletter_content text-lg-left text-center">
+							<div class="newsletter_title">sign up for news and offers</div>
+							<div class="newsletter_subtitle">Subcribe to lastest smartphones news & great deals we offer</div>
+						</div>
+
+						<!-- Newsletter Form -->
+
+
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 
 	<!-- Footer -->
 
 	<footer class="footer">
-		<div class="footer_background" style="background-image:url(images/footer_background.png)"></div>
+		<div class="footer_background" style="background-image:url({% static 'images/footer_background.png' %})"></div>
 		<div class="container">
 			<div class="row footer_row">
 				<div class="col">
@@ -210,13 +347,12 @@
 						<div class="row">
 
 							<div class="col-lg-3 footer_col">
-					
+
 								<!-- Footer About -->
 								<div class="footer_section footer_about">
 									<div class="footer_logo_container">
-
-										<a href="{% url 'homepage' %}">
-											<div class="logo_text">Jež</div>
+										<a href="#">
+											<div class="footer_logo_text">Jež</div>
 										</a>
 									</div>
 									<div class="footer_about_text">
@@ -227,55 +363,51 @@
 											<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 											<li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
 											<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+											<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
 										</ul>
 									</div>
 								</div>
+
 							</div>
+
+							<div class="col-lg-3 footer_col">
+
+								<!-- Footer Contact -->
+								<div class="footer_section footer_contact">
+									<div class="footer_title">Piši nam</div>
+									<div class="footer_contact_info">
+										<ul>
+											<li>Email: jezweb2019@gmail.com</li>
+										</ul>
+									</div>
+								</div>
+
+							</div>
+
 						</div>
 					</div>
 				</div>
 			</div>
 
-			<div class="row copyright_row">
-				<div class="col">
-					<div class="copyright d-flex flex-lg-row flex-column align-items-center justify-content-start">
-						<div class="cr_text"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></div>
-						<div class="ml-lg-auto cr_links">
-							<ul class="cr_list">
-								<li><a href="#">Copyright</a></li>
-								<li><a href="#">Uvjeti korištenja</a></li>
-								<li><a href="#">Politika privatnosti</a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div>
 		</div>
 	</footer>
 </div>
-<script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
-<script src="{% static 'styles/bootstrap4/popper.js' %}"></script>
-<script src="{% static 'styles/bootstrap4/bootstrap.min.js' %}"></script>
-<script src="{% static 'plugins/greensock/TweenMax.min.js' %}"></script>
-<script src="{% static 'plugins/greensock/TimelineMax.min.js' %}"></script>
-<script src="{% static 'plugins/scrollmagic/ScrollMagic.min.js' %}"></script>
-<script src="{% static 'plugins/greensock/animation.gsap.min.js' %}"></script>
-<script src="{% static 'plugins/greensock/ScrollToPlugin.min.js' %}"></script>
-<script src="{% static 'plugins/easing/easing.js' %}"></script>
-<script src="{% static 'plugins/parallax-js-master/parallax.min.js' %}"></script>
 
-<script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
-<script src="{% static 'styles/bootstrap4/popper.js' %}"></script>
-<script src="{% static 'styles/bootstrap4/bootstrap.min.js' %}"></script>
-<script src="{% static 'plugins/OwlCarousel2-2.2.1/owl.carousel.js' %}"></script>
-<script src="{% static 'plugins/easing/easing.js' %}"></script>
-<script src="{% static 'plugins/parallax-js-master/parallax.min.js' %}"></script>
+<script src="{% static 'js/jquery-3.2.1.min.js"></script>
+<script src="{% static 'styles/bootstrap4/popper.js"></script>
+<script src="{% static 'styles/bootstrap4/bootstrap.min.js"></script>
+<script src="{% static 'plugins/greensock/TweenMax.min.js"></script>
+<script src="{% static 'plugins/greensock/TimelineMax.min.js"></script>
+<script src="{% static 'plugins/scrollmagic/ScrollMagic.min.js"></script>
+<script src="{% static 'plugins/greensock/animation.gsap.min.js"></script>
+<script src="{% static 'plugins/greensock/ScrollToPlugin.min.js"></script>
+<script src="{% static 'plugins/OwlCarousel2-2.2.1/owl.carousel.js"></script>
+<script src="{% static 'plugins/easing/easing.js"></script>
+<script src="{% static 'plugins/parallax-js-master/parallax.min.js"></script>
+<script src="{% static 'js/custom.js"></script>
 <script src="{% static 'plugins/colorbox/jquery.colorbox-min.js' %}"></script>
 <script src="{% static 'js/course.js' %}"></script>
 <script src="{% static 'js/our_custom.js' %}"></script>
 {% endblock content %}
-
 </body>
 </html>
