--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,8 @@
 <link rel="stylesheet" type="text/css" href="{% static 'plugins/OwlCarousel2-2.2.1/animate.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'styles/main_styles.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'styles/responsive.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'styles/about.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'styles/about_responsive.css' %}">
 </head>
 <body>
 
@@ -335,7 +337,7 @@
 			</div>
 		</div>
 	</div>
-
+{% endblock content %}
 	<!-- Footer -->
 
 	<footer class="footer">
@@ -408,6 +410,6 @@
 <script src="{% static 'plugins/colorbox/jquery.colorbox-min.js' %}"></script>
 <script src="{% static 'js/course.js' %}"></script>
 <script src="{% static 'js/our_custom.js' %}"></script>
-{% endblock content %}
+
 </body>
 </html>
