--- a/za_brucose/templates/za_brucose/zabrucose.html
+++ b/za_brucose/templates/za_brucose/zabrucose.html
@@ -1,6 +1,186 @@
 {% extends 'index.html' %}
-
+{% load static %}
 {% block content %}
-    <br><br><br><br><br>
-    <h1>Neka FQ??nez</h1>
+
+	<div class="about">
+		<div class="container">
+            <br><br><br><br><br>
+			<div class="row">
+				<div class="col">
+					<div class="section_title_container float-left">
+						<h2 class="section_title">Mali vodič za brucoše i ostale koje žele upisati RiTeh</h2>
+					</div>
+				</div>
+			</div>
+            <br><br>
+            <div class="about_item_text">
+            <h3>Urediti podtekst! font, prored, boja, o tom po tom</h3><br>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel gravida arcu Vestibulum</p>
+            Odavno je uspostavljena činjenica da čitača ometa razumljivi tekst dok gleda raspored elemenata na stranici. Smisao korištenja Lorem Ipsum-a jest u tome što umjesto 'sadržaj ovjde, sadržaj ovjde' imamo normalni raspored slova i riječi, pa čitač ima dojam da gleda tekst na razumljivom jeziku. Mnogi programi za stolno izdavaštvo i uređivanje web stranica danas koriste Lorem Ipsum kao zadani model teksta, i ako potražite 'lorem ipsum' na Internetu, kao rezultat dobit ćete mnoge stranice u izradi. Razne verzije razvile su se tijekom svih tih godina, ponekad slučajno, ponekad namjerno (s dodatkom humora i slično).
+            </div>
+            <div class="row about_row">
+				<!-- About Item -->
+				<div class="col-lg-4 about_col about_col_left">
+					<div class="about_item">
+						<div class="about_item_image"><img src="{% static 'images/about_1.jpg' %}" alt=""></div>
+						<div class="about_item_title"><a href="#">Tekst1</a></div>
+						<div class="about_item_text">
+							<p>Lorem ipsum dolor sit , consectet adipisi elit, sed do eiusmod tempor for enim en consectet adipisi elit, sed do consectet adipisi elit, sed doadesg.</p>
+						</div>
+					</div>
+				</div>
+
+				<!-- About Item -->
+				<div class="col-lg-4 about_col about_col_middle">
+					<div class="about_item">
+						<div class="about_item_image"><img src="{% static 'images/about_2.jpg' %}" alt=""></div>
+						<div class="about_item_title"><a href="#">Tekst2</a></div>
+						<div class="about_item_text">
+							<p>Lorem ipsum dolor sit , consectet adipisi elit, sed do eiusmod tempor for enim en consectet adipisi elit, sed do consectet adipisi elit, sed doadesg.</p>
+						</div>
+					</div>
+				</div>
+
+				<!-- About Item -->
+				<div class="col-lg-4 about_col about_col_right">
+					<div class="about_item">
+						<div class="about_item_image"><img src="{% static 'images/about_3.jpg' %}" alt=""></div>
+						<div class="about_item_title"><a href="#">Tekst3</a></div>
+						<div class="about_item_text">
+							<p>Lorem ipsum dolor sit , consectet adipisi elit, sed do eiusmod tempor for enim en consectet adipisi elit, sed do consectet adipisi elit, sed doadesg.</p>
+						</div>
+					</div>
+				</div>
+
+			</div>
+		</div>
+	</div>
+
+	<!-- Feature -->
+
+	<div class="feature">
+		<div class="feature_background" style="background-image:url({% static 'images/courses_background.jpg' %})"></div>
+		<div class="container">
+			<div class="row ">
+				<div class="col justify-content-sm-start">
+					<div class="section_title_container float-left">
+						<h2 class="section_title">Često postavljana pitanja</h2>
+						<div class="section_subtitle">
+                            <p>Tu bi stavila niz glupastih pitanja koje zabrinjavaju brucoše tipa KAKAV LAPTOP MI TRIBA?? I MOGU LI ZAVRŠITI FAKS AKO IMAM 2 MAT U SREDNJOJ i tako nešto
+                            mogu ih staviti koliko god želim + slike</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel gravida arcu. Vestibulum feugiat, sapien ultrices fermentum congue, quam velit venenatis sem</p></div>
+					</div>
+				</div>
+			</div>
+			<div class="row feature_row ">
+
+				<!-- Feature Content -->
+				<div class="col-lg-6 feature_col">
+					<div class="feature_content">
+						<!-- Accordions -->
+						<div class="accordions">
+
+							<div class="elements_accordions">
+
+								<div class="accordion_container">
+									<div class="accordion d-flex flex-row align-items-center"><div>Pitanje1</div></div>
+									<div class="accordion_panel">
+										<p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+									</div>
+								</div>
+
+								<div class="accordion_container">
+									<div class="accordion d-flex flex-row align-items-center active"><div>Pitanje2</div></div>
+									<div class="accordion_panel">
+										<p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+									</div>
+								</div>
+
+								<div class="accordion_container">
+									<div class="accordion d-flex flex-row align-items-center"><div>Pitanje3</div></div>
+									<div class="accordion_panel">
+										<p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+									</div>
+								</div>
+
+								<div class="accordion_container">
+									<div class="accordion d-flex flex-row align-items-center"><div>Pitanje4</div></div>
+									<div class="accordion_panel">
+										<p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+									</div>
+								</div>
+
+							</div>
+
+						</div>
+						<!-- Accordions End -->
+					</div>
+				</div>
+
+				<!-- Feature Video -->
+				<div class="col-lg-6 feature_col">
+                    <div class="feature_content">
+						<!-- Accordions -->
+						<div class="accordions">
+
+							<div class="elements_accordions">
+
+								<div class="accordion_container">
+									<div class="accordion d-flex flex-row align-items-center"><div>Pitanje5</div></div>
+									<div class="accordion_panel">
+										<p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+									</div>
+								</div>
+
+								<div class="accordion_container">
+									<div class="accordion d-flex flex-row align-items-center active"><div>Pitanje6</div></div>
+									<div class="accordion_panel">
+										<p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+									</div>
+								</div>
+
+								<div class="accordion_container">
+									<div class="accordion d-flex flex-row align-items-center"><div>Pitanje</div></div>
+									<div class="accordion_panel">
+										<p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+									</div>
+								</div>
+
+								<div class="accordion_container">
+									<div class="accordion d-flex flex-row align-items-center"><div>Pitanje...</div></div>
+									<div class="accordion_panel">
+										<p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+									</div>
+								</div>
+
+							</div>
+
+						</div>
+                    </div>
+					<!--<div class="feature_video d-flex flex-column align-items-center justify-content-center">-->
+						<!--<div class="feature_video_background" style="background-image:url({% static 'images/video.jpg' %})"></div>-->
+						<!--<a class="vimeo feature_video_button" href="https://player.vimeo.com/video/99340873?title=0" title="OH, PORTUGAL - IN 4K - Basti Hansen - Stock Footage">-->
+							<!--<img src="images/play.png" alt="">-->
+						<!--</a>-->
+					<!--</div>-->
+				</div>
+			</div>
+		</div>
+	</div>
+
+
+<script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
+<script src="{% static 'styles/bootstrap4/popper.js' %}"></script>
+<script src="{% static 'styles/bootstrap4/bootstrap.min.js' %}"></script>
+<script src="{% static 'plugins/greensock/TweenMax.min.js' %}"></script>
+<script src="{% static 'plugins/greensock/TimelineMax.min.js' %}"></script>
+<script src="{% static 'plugins/scrollmagic/ScrollMagic.min.js' %}"></script>
+<script src="{% static 'plugins/greensock/animation.gsap.min.js' %}"></script>
+<script src="{% static 'plugins/greensock/ScrollToPlugin.min.js' %}"></script>
+<script src="{% static 'plugins/OwlCarousel2-2.2.1/owl.carousel.js' %}"></script>
+<script src="{% static 'plugins/easing/easing.js' %}"></script>
+<script src="{% static 'plugins/parallax-js-master/parallax.min.js' %}"></script>
+<script src="{% static 'plugins/colorbox/jquery.colorbox-min.js' %}"></script>
+<script src="{% static 'js/about.js' %}"></script>
+
 {% endblock %}
