--- a/templates/index.html
+++ b/templates/index.html
@@ -72,12 +72,16 @@
 									<li><a href="{% url 'account:signup'%}">Registriraj se</a></li>
 									{% else %}
 									<li><a href="{% url 'studij:homepage'%}">Arhiva kolegija</a></li>
+
 									<li class="dropdown">
-										<a class="dropdown-toggle" data-toggle="dropdown" href="#">{{user.get_username }}
+										<a class="dropdown-toggle" data-toggle="dropdown" href="#">
 										<span class="caret"></span></a>
-										<ul class="dropdown-menu">
-											<li><a href="{% url 'account:mypage' %}">Moj profil</a></li><br>
+										<ul class="dropdown-menu dropd">
+											<span class="fa fa-user" style="font-size:30px;color:#0062cc "></span>
+											<li><a href="{% url 'account:mypage' %}">{{user.username}}</a></li><br>
+											<span class="fa fa-gear" style="font-size:30px;color:#0062cc "></span>
 										  	<li><a href="{% url 'account:settings'%}">Postavke</a></li><br>
+											<span class="fa fa-sign-out" style="font-size:30px;color:#0062cc "></span>
 											<li><a href="{% url 'account:logout' %}">Odjavi se</a></li><br>
 										</ul>
       								</li>
