--- a/objava/templates/objava/post.html
+++ b/objava/templates/objava/post.html
@@ -17,7 +17,7 @@
                     <div class="blog_content">
                         <!-- Comments -->
                         <div class="comments_container">
-                            <div class="comments_title"><span>{{kolegij_id}}</span></div><br><br>
+                            <div class="comments_title"><span>{{kolegij_id}} - {{tema_ime}}</span></div><br><br>
                             <ul class="comments_list">
                                 {% define as prethodna_objava %}
                                 {% for obj in items %}
