--- a/za_brucose/templates/za_brucose/zabrucose.html
+++ b/za_brucose/templates/za_brucose/zabrucose.html
@@ -83,30 +83,30 @@
 							<div class="elements_accordions">
 
 								<div class="accordion_container">
-									<div class="accordion d-flex flex-row align-items-center"><div>Pitanje1</div></div>
+									<div class="accordion d-flex flex-row align-items-center"><div>Tko je onaj zgodan decko sa diplomskog na racunarstvu?</div></div>
 									<div class="accordion_panel">
-										<p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+										<p>Romano Polić.</p>
 									</div>
 								</div>
 
 								<div class="accordion_container">
-									<div class="accordion d-flex flex-row align-items-center active"><div>Pitanje2</div></div>
+									<div class="accordion d-flex flex-row align-items-center active"><div>Kako je moguće da izgleda tako dobro?</div></div>
 									<div class="accordion_panel">
-										<p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+										<p>Romano je, osim što je odlican student, jako dobar atleticar. Bio. Vise i nije bas. Specijalnost mu je skok u dalj na trticu.</p>
 									</div>
 								</div>
 
 								<div class="accordion_container">
-									<div class="accordion d-flex flex-row align-items-center"><div>Pitanje3</div></div>
+									<div class="accordion d-flex flex-row align-items-center"><div>Trenira li puno kako bi odrzavao takav izgled?</div></div>
 									<div class="accordion_panel">
-										<p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+										<p>Pa i ne previse. Romano je aktivan korisnik steroida koji su javna tajna njegovog izgleda.</p>
 									</div>
 								</div>
 
 								<div class="accordion_container">
-									<div class="accordion d-flex flex-row align-items-center"><div>Pitanje4</div></div>
+									<div class="accordion d-flex flex-row align-items-center"><div style="word-wrap:breacol-lg ">Kako se hrani Romano da očuva tijelo isklesano kao grčki bog Apolon?</div></div>
 									<div class="accordion_panel">
-										<p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+										<p>Osim već spomenutih steroida, Romano za doručak jede puno čvaraka. Također, pojede 2 komada istog kolača, ali samo polovicu od svakog.</p>
 									</div>
 								</div>
 
@@ -126,30 +126,30 @@
 							<div class="elements_accordions">
 
 								<div class="accordion_container">
-									<div class="accordion d-flex flex-row align-items-center"><div>Pitanje5</div></div>
+									<div class="accordion d-flex flex-row align-items-center"><div>Prima li Romano stipendiju?</div></div>
 									<div class="accordion_panel">
-										<p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+										<p>Ne. Romano prima stipendijE.</p>
 									</div>
 								</div>
 
 								<div class="accordion_container">
-									<div class="accordion d-flex flex-row align-items-center active"><div>Pitanje6</div></div>
+									<div class="accordion d-flex flex-row align-items-center active"><div>Radi li Romano?</div></div>
 									<div class="accordion_panel">
-										<p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+										<p>Da. Romano radi u firmi e-glas kao ispomoć kolegici Z.</p>
 									</div>
 								</div>
 
 								<div class="accordion_container">
-									<div class="accordion d-flex flex-row align-items-center"><div>Pitanje</div></div>
+									<div class="accordion d-flex flex-row align-items-center"><div>Pije li Romano?</div></div>
 									<div class="accordion_panel">
-										<p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+										<p>Trenutno ne. Napio se 23.06.2017. na kampiranju ko svinja pa ga drzi jos.</p>
 									</div>
 								</div>
 
 								<div class="accordion_container">
-									<div class="accordion d-flex flex-row align-items-center"><div>Pitanje...</div></div>
+									<div class="accordion d-flex flex-row align-items-center"><div>Kako Romano sve stize s obzirom na vrhunski ucinak u svim granama zivota?</div></div>
 									<div class="accordion_panel">
-										<p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+										<p>Osim navedenih steroida, Romanova sestra Iva Polić radi za Romano sve zivo i nezivo, od igle do aviona. #izdrziIva</p>
 									</div>
 								</div>
 
